Koppeling met back-end werkend, pagina navigatie toegevoegd.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 quarkus.http.port=7777
-#quarkus.http.auth.permission.all-resources.paths=/*
-#quarkus.http.auth.permission.all-resources.policy=authenticated
-#quarkus.oidc.application-type=web_app
-#quarkus.oidc.logout.path=/logout
+quarkus.http.auth.permission.all-resources.paths=/*
+quarkus.http.auth.permission.all-resources.policy=authenticated
+quarkus.oidc.application-type=web_app
+quarkus.oidc.logout.path=/logout
 
-#quarkus.oidc.auth-server-url=http://localhost:8180/realms/energiecommunities
-#quarkus.oidc.client-id=portaal
-#quarkus.oidc.credentials.secret=KjVCcOksVTHYO6SkUraOVf0ID6eh4nRe
-
-#quarkus.keycloak.devservices.shared=true
+quarkus.oidc.auth-server-url=http://localhost:8180/realms/energiecommunities
+quarkus.oidc.client-id=portaal
+quarkus.oidc.credentials.secret=6uRR0XIwHzeYVUvuFC0tNZpgPOjA9sTD
+quarkus.oidc.token-state-manager.split-tokens=true
