Fix voor template crash.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ quarkus.oidc.auth-server-url=http://localhost:8180/realms/energiecommunities
 quarkus.oidc.client-id=portaal
 quarkus.oidc.credentials.secret=6uRR0XIwHzeYVUvuFC0tNZpgPOjA9sTD
 quarkus.oidc.token-state-manager.split-tokens=true
+quarkus.devservices.enabled=false
